[gd_scene load_steps=36 format=2]

[ext_resource path="res://Path.gd" type="Script" id=1]
[ext_resource path="res://Images/Ship.png" type="Texture" id=2]
[ext_resource path="res://Images/Back.png" type="Texture" id=3]
[ext_resource path="res://Images/Button.png" type="Texture" id=4]
[ext_resource path="res://Game.gd" type="Script" id=5]
[ext_resource path="res://Images/Towers/Turret_Poison.png" type="Texture" id=6]
[ext_resource path="res://Images/Info/Icon.png" type="Texture" id=7]
[ext_resource path="res://Images/Info/Mana_Full.png" type="Texture" id=8]
[ext_resource path="res://Images/Info/HP_Full.png" type="Texture" id=9]
[ext_resource path="res://Images/Info/Mana_Empty.png" type="Texture" id=10]
[ext_resource path="res://Images/Info/HP_Empty.png" type="Texture" id=11]
[ext_resource path="res://Node2D.gd" type="Script" id=12]
[ext_resource path="res://Images/Info/Techno.png" type="Texture" id=13]
[ext_resource path="res://Images/Player_Techno.png" type="Texture" id=14]
[ext_resource path="res://Images/Info/Level.png" type="Texture" id=15]
[ext_resource path="res://Images/Info/Level2.png" type="Texture" id=16]
[ext_resource path="res://Turret.gd" type="Script" id=17]
[ext_resource path="res://Images/Shield.png" type="Texture" id=18]
[ext_resource path="res://Images/Player.png" type="Texture" id=19]
[ext_resource path="res://Player.gd" type="Script" id=20]
[ext_resource path="res://Images/Bee_Ship.png" type="Texture" id=21]
[ext_resource path="res://Images/Buttonsize.PNG" type="Texture" id=22]
[ext_resource path="res://BeepBox-Song.wav" type="AudioStream" id=23]
[ext_resource path="res://Images/Towers/HP_Regen.png" type="Texture" id=24]
[ext_resource path="res://Images/Towers/Mana_Regen.png" type="Texture" id=25]
[ext_resource path="res://Images/Towers/Turret_Confusion.png" type="Texture" id=26]
[ext_resource path="res://Images/Towers/Turret_Glue.png" type="Texture" id=27]
[ext_resource path="res://Images/Info/Bee_Icon.png" type="Texture" id=28]
[ext_resource path="res://Images/Font.tres" type="DynamicFont" id=29]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 13 ), ExtResource( 28 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -8, 40, 0, 0, 0, 0, 1254.78, 39.7255, 0, 0, 0, 0, 1254.98, 76.7443, 0, 0, 0, 0, 19.8991, 77.7915, 0, 0, 0, 0, 19.9375, 115.313, 0, 0, 0, 0, 1255.02, 115.378, 0, 0, 0, 0, 1255.12, 152.401, 0, 0, 0, 0, 18.2652, 152.773, 0, 0, 0, 0, 18.1716, 189.575, 0, 0, 0, 0, 1255.06, 189.891, 0, 0, 0, 0, 1254.92, 226.08, 0, 0, 0, 0, 18.3029, 226.21, 0, 0, 0, 0, 18.4406, 262.448, 0, 0, 0, 0, 1255.09, 263.151, 0, 0, 0, 0, 1254.97, 299.176, 0, 0, 0, 0, 19.1522, 299.313, 0, 0, 0, 0, 18.9947, 335.22, 0, 0, 0, 0, 1255.14, 335.455, 0, 0, 0, 0, 1254.83, 372.353, 0, 0, 0, 0, 17.4335, 372.43, 0, 0, 0, 0, 17.5, 408.5, 0, 0, 0, 0, 1255.28, 409.059, 0, 0, 0, 0, 1255.22, 446.332, 0, 0, 0, 0, 16.023, 445.848, 0, 0, 0, 0, 16.0109, 483.301, 0, 0, 0, 0, 1255.48, 483.114, 0, 0, 0, 0, 1359.49, 482.98 )
}

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 14 ), ExtResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 47.1776, 28.5501 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 57.695, 30.3726 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 639.182, 354.02 )
texture = ExtResource( 3 )

[node name="Quit" type="TextureButton" parent="."]
margin_left = 1197.67
margin_right = 1273.67
margin_bottom = 75.0
texture_normal = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_Info" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="Wave" type="Label" parent="Player_Info"]
margin_right = 40.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 29 )
text = "Wave: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wave2" type="Label" parent="Player_Info/Wave"]
margin_left = 111.377
margin_right = 221.377
margin_bottom = 38.0
custom_fonts/font = ExtResource( 29 )
text = "E"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="TextureProgress" parent="Player_Info"]
margin_left = 74.9553
margin_top = 626.878
margin_right = 167.955
margin_bottom = 640.878
max_value = 10.0
value = 10.0
texture_under = ExtResource( 11 )
texture_progress = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mana" type="TextureProgress" parent="Player_Info"]
margin_left = 64.0
margin_top = 641.0
margin_right = 177.0
margin_bottom = 658.0
max_value = 30.0
value = 30.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Char" type="AnimatedSprite" parent="Player_Info"]
position = Vector2( 64.6544, 609.273 )
frames = SubResource( 1 )
frame = 1

[node name="Level" type="TextureProgress" parent="Player_Info"]
margin_left = 19.5998
margin_top = 625.669
margin_right = 43.5998
margin_bottom = 651.669
texture_under = ExtResource( 16 )
texture_progress = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Path" type="Path2D" parent="."]
curve = SubResource( 2 )
script = ExtResource( 1 )

[node name="Enemy_Spawn" type="Timer" parent="Path"]
wait_time = 0.001
one_shot = true

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 638.681, 566.406 )
z_index = 5
collision_layer = 786432
collision_mask = 786432
script = ExtResource( 20 )

[node name="Player" type="AnimatedSprite" parent="Player"]
position = Vector2( 0.118515, 0.106569 )
frames = SubResource( 3 )
frame = 1

[node name="Bee" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, -0.56189 )
shape = SubResource( 4 )

[node name="Normal" type="CollisionShape2D" parent="Player"]
shape = SubResource( 5 )

[node name="Boost" type="Timer" parent="Player"]
wait_time = 0.2
one_shot = true

[node name="Shooting" type="Timer" parent="Player"]
wait_time = 0.2
one_shot = true

[node name="Shield" type="Sprite" parent="Player"]
visible = false
position = Vector2( 0.0805664, -33.4498 )
texture = ExtResource( 18 )

[node name="Bee2" type="Timer" parent="Player"]
wait_time = 0.1
one_shot = true

[node name="Ship" type="TextureRect" parent="."]
margin_top = 30.423
margin_right = 1280.0
margin_bottom = 750.423
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Landing Button" type="TextureButton" parent="."]
margin_left = 556.674
margin_top = 597.414
margin_right = 723.674
margin_bottom = 748.414
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Turret" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 250.309, 691.337 )
frames = SubResource( 6 )
script = ExtResource( 17 )

[node name="Shooting" type="Timer" parent="Turret"]
wait_time = 2.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
autoplay = true

[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="Path/Enemy_Spawn" to="Path" method="_on_Enemy_Spawn_timeout"]
[connection signal="timeout" from="Player/Boost" to="Player" method="_on_Boost_timeout"]
[connection signal="timeout" from="Player/Shooting" to="Player" method="_on_Shooting_timeout"]
[connection signal="timeout" from="Player/Bee2" to="Player" method="_on_Bee2_timeout"]
[connection signal="pressed" from="Landing Button" to="." method="_on_Landing_Button_pressed"]
[connection signal="timeout" from="Turret/Shooting" to="Turret" method="_on_Shooting_timeout"]
